Day 7 | Updated solutions and stars in README

--- a/solutions/src/main/resources/log4j2.properties
+++ b/solutions/src/main/resources/log4j2.properties
@@ -1,5 +1,5 @@
 # Set Logging Level
-rootLogger.level = DEBUG
+rootLogger.level = INFO
 rootLogger.appenderRef.stdout.ref = STDOUT
 
 # Redirect Logs to System Out
