--- a/implementation/src/main/resources/log4j2.properties
+++ b/implementation/src/main/resources/log4j2.properties
@@ -1,5 +1,5 @@
 # Set Logging Level
-rootLogger.level = DEBUG
+rootLogger.level = ERROR
 rootLogger.appenderRef.stdout.ref = STDOUT
 
 # Redirect Logs to System Out
